--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.7",
+    "react-toastify": "^9.1.1",
+    "react-use-downloader": "^1.2.1",
     "typescript": "4.9.4"
   }
 }
